Update EmbedPrayerTable and InfoCard with makrooh logic and responsive font improvements

--- a/embed.html
+++ b/embed.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prayer Timetable Embed</title>
+    <title>Greenbank Masjid Timetable</title>
   </head>
-  <body class="bg-black text-white">
+  <body>
     <div id="root"></div>
-    <script type="module" src="/src/main-embed.jsx"></script>
+    <script type="module" src="/main-embed.jsx"></script>
   </body>
 </html>
