--- a/index.html
+++ b/index.html
@@ -2,16 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Greenbank Masjid Timetable</title>
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- ✅ Load Rubik, Cairo, Inter, Lalezar, Poppins, and Amiri fonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Rubik:wght@400;700&family=Inter:wght@400;600&family=Lalezar&family=Poppins:wght@400;600&family=Amiri&display=swap"
-      rel="stylesheet"
-    />
+    <title>Greenbank Masjid Display</title>
   </head>
-  <body class="bg-black text-white">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
