--- a/embed.html
+++ b/embed.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/main-embed.jsx"></script>
+    <script type="module" src="./main-embed.jsx"></script>
+
   </body>
 </html>
