--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Greenbank Masjid Display</title>
+
+    <!-- Load fonts (exactly one link; no duplicates, no nesting) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Cairo:wght@400;700&family=Inter:wght@400;600;700&family=Lalezar&family=Poppins:wght@400;600;700&family=Rubik:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
+    <!-- If your entry is main.tsx, change to /src/main.tsx -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
