chore(pwa-mobile): add maskable/regular icons and optional wide screenshot; clean manifest warnings

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Greenbank Masjid Display</title>
 
+    <!-- PWA (mobile scope only) -->
+    <link rel="manifest" href="/mobile/manifest.webmanifest" />
+    <meta name="theme-color" content="#0b0f1a" />
+    <!-- iOS install hints -->
+    <link rel="apple-touch-icon" href="/mobile/icons/icon-192.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
     <!-- Load fonts (exactly one link; no duplicates, no nesting) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
