--- a/index.html
+++ b/index.html
@@ -3,20 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Viewport: include viewport-fit for iOS safe areas -->
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
+
     <title>Greenbank Masjid Display</title>
 
     <!-- PWA (mobile scope only) -->
     <link rel="manifest" href="/mobile/manifest.webmanifest" />
     <meta name="theme-color" content="#0b0f1a" />
-    <!-- iOS install hints -->
+    <meta name="mobile-web-app-capable" content="yes" />
+
+    <!-- iOS standalone -->
     <link rel="apple-touch-icon" href="/mobile/icons/icon-192.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-title" content="Greenbank Mobile" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-    <!-- Load fonts (exactly one link; no duplicates, no nesting) -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Cairo:wght@400;700&family=Inter:wght@400;600;700&family=Lalezar&family=Poppins:wght@400;600;700&family=Rubik:wght@400;600;700&display=swap"
       rel="stylesheet"
@@ -24,7 +33,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- If your entry is main.tsx, change to /src/main.tsx -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
